<resources>
    <string name="app_name">Location Parking</string>
    <string name="google_key">AIzaSyDgljMCSPF2VTSKBWAX4F-Bu_Ch8A9hRwU</string>
    <string name="facebook_app_id">1747895645223501</string>
    <string name="fb_login_protocol_scheme">fb1747895645223501</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="birthdate">Birthdate</string>
    <string name="login">Log In</string>
    <string name="signin">Sign In</string>
    <string name="or">or</string>
    <string name="and">and</string>
    <string name="register">Register</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="create_account_text">Don\'t have an account yet? <b>Sign Up</b></string>
    <string name="error_username">Enter valid username.</string>
    <string name="error_password">Enter valid password.</string>
    <string name="registration_name_title">What is your name?</string>
    <string name="registration_email_title">And, Your email?</string>
    <string name="registration_email_sub_title">Please note this email will be used to login your account</string>
    <string name="registration_password_title">Create your password</string>
    <string name="registration_password_sub_title">Your password should at least contain a letter, number and minimum 8 characters</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="map">Map</string>
    <string name="share">Share</string>
    <string name="feed">Feed</string>
    <string name="inbox">Inbox</string>
    <string name="history">History</string>
    <string name="location_permission_denied">You location permission has been denied</string>
    <string name="permission_required_toast">Permission is required to get precise location</string>
    <string name="permission_rationale_location">Permission rationale.</string>
    <string name="pending_request">Pending requests</string>
    <string name="no_request_message">You don\'t have any request yet!</string>
    <string name="done">Done</string>
    <string name="park_your_car">Park your car</string>
    <string name="api_failure_message">Cannot connect to server. Please try again.</string>
    <string name="remove_parking">Remove parking</string>
    <string name="share_parking">Share parking</string>
    <string name="stop_sharing">Stop sharing</string>
    <string name="see_all_requests">See all requests</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="send_request">Send Request</string>
    <string name="navigate">Navigate</string>
    <string name="confirm_handshake">Confirm Handshake</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="set_timer">Set timer</string>
    <string name="share_duration">Share Duration</string>
    <string name="launch_activity">Launch Activity</string>
    <string name="remove_location_updates">Stop Updates</string>
    <string name="distance_no_info">Distance not known</string>
    <string name="distance_info">%d meters away</string>

</resources>
