<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_feed"
        android:enabled="true"
        android:icon="@drawable/ic_action_feed"
        android:title="@string/feed"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/ic_action_history"
        android:title="@string/history"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_share"
        android:enabled="true"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_inbox"
        android:enabled="true"
        android:icon="@drawable/ic_action_inbox"
        android:title="@string/inbox"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_action_profile"
        android:title="@string/profile"
        app:showAsAction="withText" />
</menu>